process file data instructions + add more tests